# audio-effects-sdk-desktop-sample

./: CMakeLists.txt  README.md  main.cpp
core/: abstract_audio_source.cpp  abstract_audio_source.h  audio_buffer_qiodevice.cpp  audio_buffer_qiodevice.h  audio_playback.cpp  audio_playback.h  audio_qiodevice_proxy.cpp  audio_qiodevice_proxy.h  core.cpp  core.h  file_audio_source.cpp  file_audio_source.h  mic_audio_source.cpp  mic_audio_source.h  mic_enumerator.h  sdk_factory.cpp  sdk_factory.h  sdk_helpers.cpp  sdk_helpers.h  sdk_notification_handler.cpp  sdk_notification_handler.h
ui/: main_window.cpp  main_window.h
ui/resources/: resources.qrc
